--- a/PHP/Callback/index.html
+++ b/PHP/Callback/index.html
@@ -2,7 +2,7 @@
 <body>
 <div align="center">
 <h2>Call Back Request</h2>
-<form action="callback.php" method="get">
+<form action="callback.php" method="post" target="_blank">
 Name: <input type="text" name="name"><br>
 Number: <input type="text" name="number"><br>
 <input type="submit">
